--- a/cajas.html
+++ b/cajas.html
@@ -16,7 +16,12 @@
 
 	<div id="caja3"></div>
 
-	<div id="caja4"></div>
+	<div id="caja4"></div>-->
 
+	<div class="anterior">&lt;div&gt; Anterior</div>
+	<div class="muestra">Contenido del div prueba</div>
+	<div class="posterior">&lt;div&gt; Posterior</div>
+		
+	</div>
 	</body>
 </html>
